tests/error/new_empty_array.gw
#! [contains] must provide values/expressions for array 
new Object[];
